--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@500&family=Poppins&family=Source+Sans+Pro&display=swap');
 body {
     font-family: sans-serif;
-    background-color: #1e1b1b;
+    background-color: #283328;
     display: grid;
     flex-direction: column;
     align-items: center;
@@ -24,7 +25,7 @@ html, .fullscreen {
 }
 
 header{
-    background-color: #06d606;
+    background-color: rgb(4, 177, 4);
     width: 100%;
     height: 40px;
     display: flex;
@@ -33,6 +34,7 @@ header{
     color: white;
     font-size: 25px;
     font-family: 'Poppins', sans-serif;
+    text-decoration: none;
 }
 .header2{
     background: rgb(6,214,6);
@@ -42,8 +44,17 @@ background: linear-gradient(248deg, rgba(6,214,6,1) 10%, rgba(0,141,0,1) 88%);
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: 'Mochiy Pop One', sans-serif;
 
     justify-content: space-around;
+    box-shadow: 10px 5px 5px black;
+}
+
+a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
 
 .card{
@@ -56,4 +67,48 @@ background: linear-gradient(248deg, rgba(6,214,6,1) 10%, rgba(0,141,0,1) 88%);
     border-radius: 20px;
     display: grid;
     align-content: center;
+}
+#cards{
+    display: flex;
+flex-direction: column;
+padding: 30px;
+align-items: center;
+justify-content: center;
+}
+
+.article > h2{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: 'Mochiy Pop One', sans-serif;
+
+}
+
+.article > p{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: 'Mochiy Pop One', sans-serif;
+}
+
+.article > a > h2{
+    font-size: 20px;
+}
+
+.image{
+    margin: auto;
+    display: block;
+   max-width: 70%;
+   max-height: 70%;
+}
+
+.article{
+    background-color: #202520;
+    margin: 20px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+    box-shadow: 10px 5px 5px black;
 }
