--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 10px;
-
+    color: white;
 }
 
 html, .fullscreen {
@@ -111,4 +111,14 @@ justify-content: center;
     justify-content: center;
     text-align: justify;
     box-shadow: 10px 5px 5px black;
+}
+
+::-webkit-scrollbar{
+    width: 12px;
+    background-color: rgb(99, 98, 98);
+}
+
+::-webkit-scrollbar-thumb{
+    background-image: linear-gradient(248deg, rgba(6,214,6,1) 10%, rgba(0,141,0,1) 88%);
+    border-radius: 10px;
 }
