--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,20 @@ header{
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
 }
+
+footer{
+    background-color: rgb(4, 177, 4);
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+}
+
 .header2{
     background: rgb(6,214,6);
 background: linear-gradient(248deg, rgba(6,214,6,1) 10%, rgba(0,141,0,1) 88%);
@@ -69,11 +83,12 @@ a{
     align-content: center;
 }
 #cards{
-    display: flex;
-flex-direction: column;
-padding: 30px;
+display: flex;
+flex-direction: row;
 align-items: center;
+flex-wrap: wrap;
 justify-content: center;
+width: 100%;
 }
 
 .article > h2{
@@ -89,28 +104,26 @@ justify-content: center;
     font-family: 'Mochiy Pop One', sans-serif;
 }
 
-.article > a > h2{
-    font-size: 20px;
-}
-
 .image{
     margin: auto;
-    display: block;
-   max-width: 70%;
-   max-height: 70%;
+     width: 90%;
+     height: 340px;
 }
 
 .article{
+    font-size: 13px;
     background-color: #202520;
     margin: 20px;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
     padding: 10px;
+    width: 25%;
     align-items: center;
     justify-content: center;
     text-align: justify;
     box-shadow: 10px 5px 5px black;
+    height: 90%;
 }
 
 ::-webkit-scrollbar{
@@ -121,4 +134,28 @@ justify-content: center;
 ::-webkit-scrollbar-thumb{
     background-image: linear-gradient(248deg, rgba(6,214,6,1) 10%, rgba(0,141,0,1) 88%);
     border-radius: 10px;
+}
+
+.mapouter{
+    background-color: #202520;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 10px 5px 5px black;
+    width:50vw;
+    height:50vh;
+    margin-top:50px;
+}
+.gmap_canvas {overflow:hidden;background:none!important;width:50vw;height:200px;}
+.gmap_iframe {width:50vw!important;height:200px!important;}
+
+@media (max-width: 1000px)
+{
+    .article{
+        width: 70vw;
+        height: 33%;
+    }
+    footer{
+        margin-top: 20vh;
+        font-size: 15px;
+    }
 }
