--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ html, .fullscreen {
 header{
     background-color: rgb(4, 177, 4);
     width: 100%;
+    padding-top: 15px;
+    padding-bottom: 15px;
     height: 40px;
     display: flex;
     align-items: center;
@@ -42,6 +44,7 @@ footer{
     width: 100%;
     height: 40px;
     display: flex;
+    margin-top: 10px;
     align-items: center;
     justify-content: center;
     color: white;
@@ -55,6 +58,8 @@ footer{
 background: linear-gradient(248deg, rgba(6,214,6,1) 10%, rgba(0,141,0,1) 88%);
     width: 100%;
     height: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
