--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@500&family=Poppins&family=Source+Sans+Pro&display=swap');
 body {
     font-family: sans-serif;
-    background-color: #283328;
+    background-color: #121812;
     display: grid;
     flex-direction: column;
     align-items: center;
@@ -25,7 +25,7 @@ html, .fullscreen {
 }
 
 header{
-    background-color: rgb(4, 177, 4);
+    background-color: rgb(3, 214, 3);
     width: 100%;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -166,3 +166,30 @@ width: 100%;
         font-size: 15px;
     }
 }
+
+.conteudo{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+.text{
+   max-width: 60%;
+   text-align: justify;
+   font-size: 25px;
+   font-family: 'Poppins', sans-serif;
+
+}
+
+.footer{ 
+    position: fixed;
+    left:0;
+    bottom: 0;
+    background-color: #040a0a6b;
+    width: 100%;
+    height: 50px;    
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-family: Trebuchet MS;
+         opacity: 0.7;
+    }
