--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,10 @@ background: linear-gradient(248deg, rgba(6,214,6,1) 10%, rgba(0,141,0,1) 88%);
     padding-bottom: 10px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     text-decoration: none;
     color: rgb(255, 255, 255);
     font-family: 'Mochiy Pop One', sans-serif;
-
-    justify-content: space-around;
     box-shadow: 10px 5px 5px black;
 }
 
@@ -94,6 +92,7 @@ align-items: center;
 flex-wrap: wrap;
 justify-content: center;
 width: 100%;
+margin-top: 40px;
 }
 
 .article > h2{
@@ -152,8 +151,8 @@ width: 100%;
     margin-top:50px;
     text-align: justify;
 }
-.gmap_canvas {overflow:hidden;background:none!important;width:60vw;height:200px;}
-.gmap_iframe {width:60vw!important;height:200px!important;}
+.gmap_canvas {overflow:hidden;background:none!important;width:60vw;height:250px;}
+.gmap_iframe {width:60vw!important;height:250px!important;}
 
 @media (max-width: 1000px)
 {
