modificado o tamanho das letras e a paginacao

--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,9 @@ margin-top: 40px;
         margin-top: 20vh;
         font-size: 15px;
     }
+    .header2{
+        font-size: 13px;
+    }
 }
 
 .conteudo{
