--- a/css/style.css
+++ b/css/style.css
@@ -203,3 +203,11 @@ margin-top: 40px;
     font-family: Trebuchet MS;
          opacity: 0.7;
     }
+
+#localizacao{
+background-color: #404640;
+color: white;
+font-size: 15px;
+margin-bottom: 5px;
+padding: 5px;
+}
